# auth-service/src/controllers/tutor.controller.ts
@@ -6,7 +6,6 @@ import { CreateTutorDto } from "../dtos/tutor.dto";
 import { OtpService } from "../services/otp.service";
 import { VerifyOtpDto } from "../dtos/student.dto";
 
-
 class TutorController {
   private tutorService = new TutotService();
   private tutorRepository = new TutorRepository();
@@ -17,7 +16,6 @@ class TutorController {
       const tutorData: CreateTutorDto = req.body;
 
       console.log("Req body : =>", req.body);
-      
 
       if (tutorData.password !== tutorData.confirmPassword) {
         return res.status(400).json({ message: "Passwords do not match" });
@@ -50,7 +48,6 @@ class TutorController {
       const verifyOtpData: VerifyOtpDto = req.body;
 
       console.log("verify otp data ===>", verifyOtpData);
-      
 
       const isOtpValid = await this.otpService.verifyOtp(
         verifyOtpData.email,
@@ -117,79 +114,106 @@ class TutorController {
 
   public signin = async (req: Request, res: Response, next: NextFunction) => {
     try {
-        const {email, password} = req.body
-        console.log(req.body);
+      const { email, password } = req.body;
+      console.log(req.body);
 
-        if (!email || !password) {
-          return res
-            .status(400)
-            .json({ message: "Email and password are required." });
-        }
-
-        const tutor = await this.tutorService.signinTutor(email, password)
-
-        console.log("Tutor in controller : ", tutor);
-        
-        res.status(200).json({ message: "Signin successful", tutorData: tutor });
-    } catch (error) {
-        next(error)
-    }
-  }
-
-  public recoverAccount = async (req: Request, res: Response, next: NextFunction) => {
-    try {
-      const {email} = req.body
-      
-      await this.tutorService.recoverAccount(email)
-
-      res.status(200).json({ message: 'OTP sent to your email.' })
-    } catch (error) {
-      next(error)
-    }
-  }
-
-  public verifyOtpForAccRecovery = async (req: Request, res: Response, next: NextFunction) => {
-    try {
-      const {email, otp} = req.body
-      
-      if (!email || !otp) {
-        return res.status(400).json({ message: 'Email and OTP are required.' });
+      if (!email || !password) {
+        return res
+          .status(400)
+          .json({ message: "Email and password are required." });
       }
 
-      const isValid = await this.otpService.verifyOtp(email, otp)
+      const tutor = await this.tutorService.signinTutor(email, password);
+
+      console.log("Tutor in controller : ", tutor);
+
+      res.status(200).json({ message: "Signin successful", tutorData: tutor });
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  public googleSignin = async (
+    req: Request,
+    res: Response,
+    next: NextFunction
+  ) => {
+    const { token } = req.body;
+
+    try {
+      const tutorData = await this.tutorService.googleSignin(token);
+
+      res.status(200).json({ tutorData: tutorData });
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  public recoverAccount = async (
+    req: Request,
+    res: Response,
+    next: NextFunction
+  ) => {
+    try {
+      const { email } = req.body;
+
+      await this.tutorService.recoverAccount(email);
+
+      res.status(200).json({ message: "OTP sent to your email." });
+    } catch (error) {
+      next(error);
+    }
+  };
+
+  public verifyOtpForAccRecovery = async (
+    req: Request,
+    res: Response,
+    next: NextFunction
+  ) => {
+    try {
+      const { email, otp } = req.body;
+
+      if (!email || !otp) {
+        return res.status(400).json({ message: "Email and OTP are required." });
+      }
+
+      const isValid = await this.otpService.verifyOtp(email, otp);
 
       if (isValid) {
-        return res.status(200).json({ message: 'OTP verified.', isValid });
+        return res.status(200).json({ message: "OTP verified.", isValid });
       } else {
-        return res.status(400).json({ message: 'Invalid OTP.', isValid });
+        return res.status(400).json({ message: "Invalid OTP.", isValid });
       }
-
     } catch (error) {
-      next(error)
+      next(error);
     }
-  }
+  };
 
-  public updatePassword = async (req: Request, res: Response, next: NextFunction) => {
+  public updatePassword = async (
+    req: Request,
+    res: Response,
+    next: NextFunction
+  ) => {
     try {
-      const {email, otp, newPassword, confirmNewPassword} = req.body
-      
-      if(newPassword !== confirmNewPassword){
+      const { email, otp, newPassword, confirmNewPassword } = req.body;
+
+      if (newPassword !== confirmNewPassword) {
         throw new Error("Invalid Password.");
       }
 
-      const isValid = await this.otpService.verifyOtp(email, otp)
+      const isValid = await this.otpService.verifyOtp(email, otp);
 
       if (!isValid) {
         throw new Error("Invalid or expired OTP.");
       }
 
-      await this.tutorService.updatePassword(email, newPassword)
+      await this.tutorService.updatePassword(email, newPassword);
 
       res.status(200).json({ message: "Password updated successfully." });
     } catch (error) {
-      next(error)
+      next(error);
     }
-  }
+  };
 }
 
 export default TutorController;
